src/test/ui/lifetimes/lifetime-errors/ex2b-push-no-existing-names.nll.stderr
error: lifetime may not live long enough
  --> $DIR/ex2b-push-no-existing-names.rs:6:5
   |
LL | fn foo(x: &mut Vec<Ref<i32>>, y: Ref<i32>) {
   |        -                      - has type `Ref<'1, i32>`
   |        |
   |        has type `&mut std::vec::Vec<Ref<'2, i32>>`
LL |     x.push(y);
   |     ^^^^^^^^^ argument requires that `'1` must outlive `'2`

error: aborting due to previous error

